--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,8 @@
-cmake_minimum_required(VERSION 3.20)
-project(table)
-
-set(CMAKE_CXX_STANDARD 17)
-
 find_package(GTest REQUIRED)
-add_executable(test test.cpp)
-target_link_libraries(test GTest::gtest)
-
 find_package(benchmark REQUIRED)
-add_executable(benchmark benchmark.cpp)
-target_link_libraries(benchmark benchmark::benchmark)
+
+add_executable(TableTest test.cpp)
+add_executable(TableBenchmark benchmark.cpp)
+
+target_link_libraries(TableTest GTest::gtest)
+target_link_libraries(TableBenchmark benchmark::benchmark)
