Rename tests target

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,8 @@
 find_package(GTest REQUIRED)
 find_package(benchmark REQUIRED)
 
-add_executable(TableTest test.cpp)
+add_executable(TableTests test.cpp)
 add_executable(TableBenchmark benchmark.cpp)
 
-target_link_libraries(TableTest GTest::gtest)
+target_link_libraries(TableTests GTest::gtest)
 target_link_libraries(TableBenchmark benchmark::benchmark)
